<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_new_notes">Add a new Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="empty_list">Your list is empty! Add something to fill it up</string>
    <string name="cancel">Cancel</string>
    <string name="Continue">Continue</string>
    <string name="enter_password">Enter Password</string>
    <string name="digits_max">10 digits MAX</string>
    <string name="forget_password_warning">Remember this password. If you forget it, you\'ll need to clear the data storage of the app thus all data will be erased</string>
    <string name="new_folder">New Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="add">Add</string>

    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="date_created">Date Created</string>
    <string name="date_modified">Date Modified</string>
    <string name="about">About</string>
    <string name="lock">Lock</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="save_as_txt">Save as txt file</string>
    <string name="share_as_pdf">Share as PDF file</string>
    <string name="share_as_txt">Share as txt file</string>
    <string name="no_results">No Results</string>
    <string name="learn_more">Learn More</string>
    <string name="trash">Trash</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

</resources>
