<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        app:showAsAction="never"
        app:actionViewClass="android.widget.TextView">
        <menu>
            <item
                android:id="@+id/sort_title"
                android:title="@string/title"/>
            <item
                android:id="@+id/sort_date_created"
                android:title="@string/date_created" />
            <item
                android:id="@+id/sort_date_modified"
                android:title="@string/date_modified"/>

        </menu>
    </item>

</menu>