<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNotes">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/new_folder"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/add_new_notes"/>
    <EditText
        android:id="@+id/input_folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_below="@+id/new_folder"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:id="@+id/folder_desc"
        android:hint="@string/description"
        android:background="@color/white"
        android:layout_below="@+id/input_folder_name"/>

</RelativeLayout>